[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Sounds/Acceleration6.ogg" type="AudioStream" id=1]
[ext_resource path="res://Resources/Sounds/EngineIdle.ogg" type="AudioStream" id=2]
[ext_resource path="res://Data/Scripts/AdvancedEngineSound.gd" type="Script" id=3]
[ext_resource path="res://Resources/Sounds/Acceleration5.ogg" type="AudioStream" id=4]
[ext_resource path="res://Resources/Sounds/AccelerationTransition2.ogg" type="AudioStream" id=5]

[node name="AdvancedEngineSound" type="Spatial"]
script = ExtResource( 3 )
acceleration_transition_length_in_ms = 200.0
acceleration_transition_1_delta_length_in_ms = 200.0
acceleration_transition_2_delta_length_in_ms = 200.0

[node name="Idle" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 3.0
autoplay = true
bus = "Train"

[node name="Acceleration1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 3.0
autoplay = true
bus = "Train"

[node name="Acceleration2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
unit_size = 3.0
autoplay = true
bus = "Train"

[node name="AccelerationTransition" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = -10.0
unit_size = 3.0
bus = "Train"
